# cpp-linear-algebra

./: .clang-format  .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  cpp-linear-algebra.slnx  cpp-linear-algebra.vcxproj  cpp-linear-algebra.vcxproj.filters  package.json  test.cpp
.github/workflows/: check_solution.yaml  cpp-build.yaml  release.yaml  unix.yaml  windows.yaml
eigen/: Makefile  main.cpp
includes/: assert.hpp  la.hpp  log.hpp  matrix.hpp  misc.hpp  settings.hpp  types.hpp  vector.hpp
includes/algorithms/: decompositions.hpp  multiplication.hpp
includes/internal/: binary.hpp  literal.hpp  memory.hpp  operant.hpp  operations.hpp  traits.hpp  unary.hpp
la/: algorithms  dense  ops  sparse  static
la/algorithm/: dense_solver.hpp  lu_decomposition.hpp  multiplication.hpp  preconditioners.hpp  solver.hpp  sparse_solver.hpp
la/algorithm/util/: preconditioner.hpp  solver.hpp
la/data_structure/: forward.hpp  matrix.hpp  mixed_data.hpp  mixed_dense_data.hpp  mixed_sparse_data.hpp  sparse_matrix.hpp  sparse_matrix_builder.hpp  static_vector.hpp  triangular_matrix.hpp  triplet_sparse_matrix.hpp  vector.hpp
la/data_structure/expressions/: binary.hpp  forward.hpp  iterator.hpp  literal.hpp  operant.hpp  operations.hpp  traits.hpp  unary.hpp
la/data_structure/util/: concepts.hpp
la/operation/: addition.hpp  inner_product.hpp  multiplication.hpp  norm.hpp  prefix.hpp  substraction.hpp
la/operations/: addition.hpp
la/util/: block_helper.hpp  constants.hpp  error.hpp  file_io.hpp  macros.hpp  memory.hpp  types.hpp
performance/: Makefile  test.cpp
performance/includes/: settings.hpp  timing.hpp
performance/src/: timing.cpp
performance_reports/: after_removing_column_wise.md  alinged_memory.md  compiler_options.md  eigen.md  execution_policy_matrix.md  include_sparse_matrix_performance.md  initial.md  lu_decomposition.md  template_expressions_mat_vec.md  unoptimized_decomposition.md  visual_studio.md  with_blocking.md
tests/: Makefile  performance.cpp  performance_test.cpp  test.cpp  unit.cpp  unit_tests.cpp
tests/includes/: base_test.hpp  collection.hpp  log.hpp  performance_test.hpp  samples.hpp  test_collection.hpp  test_log.hpp  test_matrix_add_sub_assignment.hpp  test_matrix_col_iterator.hpp  test_matrix_const_iterator.hpp  test_matrix_copy_assignment.hpp  test_matrix_row_iterator.hpp  test_vector.hpp  test_vector_add_sub_assignment.hpp  test_vector_const_iterator.hpp  test_vector_construct.hpp  test_vector_copy_assignment.hpp  test_vector_expression_temporary.hpp  test_vector_move_assignment.hpp  test_vector_resize.hpp  timing.hpp  unit_test.hpp
tests/includes/performance_tests/: add.hpp  assign.hpp  basic_operations.hpp  decompose.hpp  performance_test_collection.hpp  resize.hpp
tests/includes/unit_tests/: test_add_sub_assignment.hpp  test_add_sub_ops.hpp  test_apply_func.hpp  test_construct.hpp  test_copy_assignment.hpp  test_copy_ctor.hpp  test_dense_algorithm.hpp  test_dense_matrix.hpp  test_expression_temporary.hpp  test_inner_product.hpp  test_iterator.hpp  test_lu_decomp.hpp  test_matrix_add_sub_ops.hpp  test_matrix_construct.hpp  test_matrix_copy_ctor.hpp  test_matrix_move_assignment.hpp  test_matrix_resize.hpp  test_mixed_operations.hpp  test_move_assignment.hpp  test_move_ctor.hpp  test_mult_div_assignment.hpp  test_mult_ops.hpp  test_norms.hpp  test_read_write.hpp  test_resize.hpp  test_sparse_matrix.hpp  test_sparse_matrix_builder.hpp  test_sparse_read_write.hpp  test_static.hpp  test_unary_assignment.hpp  test_vector.hpp  test_vector_move_ctor.hpp  unit_test_collection.hpp
tests/src/: collection.cpp  log.cpp  performance_test.cpp  samples.cpp  test_collection.cpp  test_log.cpp  test_matrix_add_sub_assignment.cpp  test_matrix_copy_assignment.cpp  test_matrix_copy_ctor.cpp  test_matrix_move_ctor.cpp  test_matrix_resize.cpp  test_vector.cpp  test_vector_add_sub_assignment.cpp  test_vector_add_sub_ops.cpp  test_vector_const_iterator.cpp  test_vector_construct.cpp  test_vector_copy_assignment.cpp  test_vector_expression_temporary.cpp  test_vector_iterator.cpp  test_vector_move_assignment.cpp  test_vector_move_ctor.cpp  test_vector_resize.cpp  timing.cpp  unit_test.cpp
tests/src/performance_tests/: assign.cpp  decompose.cpp  performance_test_collection.cpp
tests/src/unit_tests/: test_add_sub_assignment.cpp  test_add_sub_ops.cpp  test_apply_func.cpp  test_construct.cpp  test_copy_assignment.cpp  test_copy_ctor.cpp  test_dense_algorithm.cpp  test_dense_matrix.cpp  test_expression_temporary.cpp  test_inner_product.cpp  test_iterator.cpp  test_lu_decomp.cpp  test_matrix_const_iterator.cpp  test_matrix_iterator.cpp  test_matrix_move_assignment.cpp  test_matrix_row_iterator.cpp  test_mixed_operations.cpp  test_move_assignment.cpp  test_move_ctor.cpp  test_mult_div_assignment.cpp  test_mult_ops.cpp  test_norms.cpp  test_read_write.cpp  test_resize.cpp  test_sparse_matrix.cpp  test_sparse_matrix_builder.cpp  test_sparse_read_write.cpp  test_static.cpp  test_unary_assignment.cpp  test_vector.cpp  test_vector_move_assignment.cpp  unit_test_collection.cpp
tmp/: test_matrix_add_sub_ops.cpp  test_matrix_col_iterator.cpp  test_matrix_construct.cpp  test_matrix_iterator.hpp  test_matrix_move_ctor.hpp  test_vector_add_sub_ops.cpp  test_vector_add_sub_ops.hpp  test_vector_const_iterator.cpp  test_vector_iterator.hpp  test_vector_move_ctor.cpp
unit_tests/: CMakeLists.txt  algorithm.cpp  expressions.cpp  matrix.cpp  operations.cpp  operations_add.cpp  operations_inner_prod.cpp  operations_mult.cpp  operations_prefix.cpp  operations_sub.cpp  packages.config  solver.cpp  sparse_matrix.cpp  sparse_matrix_builder.cpp  static_vector.cpp  test.cpp  triangular_matrix.cpp  triplet_sparse_matrix.cpp  unit_tests.vcxproj  util.cpp  vector.cpp
